Fix issue where bottom-border was getting cut off in nav.

--- a/resources/assets/components/Navigation/navigation.scss
+++ b/resources/assets/components/Navigation/navigation.scss
@@ -2,6 +2,7 @@
 
 .nav {
   overflow-x: auto;
+  padding: $half-spacing 0;
 }
 
 .nav-link {
